# html_form_actions

./: Cargo.toml  LICENSE  README.md
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/picoserve/: Cargo.toml
examples/picoserve/src/: main.rs  style.css
html_form_actions/: Cargo.toml
html_form_actions/src/: lib.rs  tests.rs
html_form_actions/src/tests/: axum.rs  picoserve.rs
html_form_actions_macros/: Cargo.toml
html_form_actions_macros/src/: lib.rs
