[package]
name = "html_form_actions_macros"
version = "0.1.0"
authors = ["Samuel Hicks"]
edition = "2024"
description = "Macros for html_form_actions"
repository = "https://github.com/sammhicks/html_form_actions"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
deluxe = "0.5.0"
deluxe-core = "0.5.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.101"
