[package]
name = "axum_example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
html_form_actions = { path = "../../html_form_actions" }
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["rt", "net", "macros", "sync"] }
